Serve up css, image and js

--- a/public/about.html
+++ b/public/about.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/css/styles.css">
   <title>About | Express Weather App</title>
 </head>
 
 <body>
   <h1>About Page</h1>
   <p>This is the about page of the weather app</p>
+  <img src="/images/dancer-1904467_640.png" alt="">
 </body>
 
 </html>
